# CLIERP

./: .gitignore  Cargo.toml  ENTERPRISE_MIGRATION_PLAN.md  README.md  generate_schema.py
.claude/: settings.local.json
.claude/agents/: database-architect.md  erp-cli-expert.md  rust-code-reviewer.md
docs/: architecture.md  database_design.md  development_roadmap.md
migrations/2024-09-21-000005_create_attendances/: down.sql  up.sql
migrations/2024-09-21-000006_create_payrolls/: down.sql  up.sql
migrations/2024-09-21-000007_create_accounts/: down.sql  up.sql
migrations/2024-09-21-000008_create_transactions/: down.sql  up.sql
migrations/2024-12-01-000000_create_product_attachments/: down.sql  up.sql
migrations/2024-12-01-000000_create_suppliers/: down.sql  up.sql
migrations/2024-12-01-000001_create_crm_tables/: down.sql  up.sql
src/: lib.rs  main.rs
src/cli/: app.rs  interactive.rs  mod.rs  session.rs
src/cli/commands/: auth.rs  crm.rs  crm_extended.rs  hr.rs  inventory.rs  mod.rs  purchase.rs  reports.rs  system.rs
src/config/: mod.rs
src/core/: auth.rs  command.rs  config.rs  error.rs  events.rs  logging.rs  mod.rs  result.rs  transaction.rs  workflow.rs
src/database/: connection.rs  crm_models.rs  migrations.rs  mod.rs  models.rs  purchase_models.rs  schema.rs  schema_backup.rs
src/modules/: mod.rs
src/utils/: crypto.rs  export.rs  filters.rs  formatting.rs  mod.rs  pagination.rs  validation.rs
tests/: crm_tests.rs  integration_tests.rs  inventory_tests.rs  reporting_tests.rs  system_integration_tests.rs
tests/common/: mod.rs
(+31 files in other folders)
