[package]
name = "clierp"
version = "0.1.0"
edition = "2021"
description = "CLI-based ERP system built with Rust"
authors = ["CLIERP Team"]
license = "MIT"
repository = "https://github.com/your-org/clierp"

[dependencies]
# CLI Framework
clap = { version = "4.4", features = ["derive", "env"] }

# Database & ORM
diesel = { version = "2.1", features = ["sqlite", "chrono", "uuid", "r2d2"], default-features = false }
diesel_migrations = "2.1"
libsqlite3-sys = { version = "0.35", features = ["bundled"] }

# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Authentication & Security
bcrypt = "0.15"
jsonwebtoken = "9.2"
uuid = { version = "1.6", features = ["v4", "serde"] }

# CLI Enhancement
crossterm = "0.27"
indicatif = "0.17"
tabled = "0.15"
colored = "2.1"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
once_cell = "1.19"
lazy_static = "1.4"
rand = "0.8"
regex = "1.10"

# QR Code and Image Processing
qrcode = "0.14"
image = "0.24"

[dev-dependencies]
tempfile = "3.8"